templates: 404 to fix image is not responsive

--- a/guest_base/static/404.scss
+++ b/guest_base/static/404.scss
@@ -1,18 +1,7 @@
 .content {
-    .page-header {
-        width: 174px;
-    }
-
-    .page-subheader {
-        margin-top: 50px;
-    }
-
     .page-content {
-        margin-bottom: 70px;
-        height: 700px;
-
-        .default-container img {
-            width: 800px;
+        #img-404 {
+            width: 100%;
         }
     }
 }
